--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 
+<html>
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+
+</head>
+
+<body>
+
+  <div id="list"></div>
+
+</body>
+
+</html>
