--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script src="javascript.js"></script>
 
 
 </head>
 
 <body>
+<input type="button" id="button1" onclick="random_dominion();" value="버튼1" />
 
   <div id="list"></div>
 
