--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<input type="button" id="button1" onclick="random_dominion();" value="버튼1" />
+<input type="button" id="button1" onclick="random_dominion();" value="" />
 
   <div id="list"></div>
 
