--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<input type="button" id="button1" onclick="random_dominion();" value="" />
+<input type="button" id="button1" onclick="random_dominion();" value="돌려돌려" />
 
   <div id="list"></div>
 
