--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	  var newList = []
 	  while(newList.length < 10){
-	    var movenum = list.splice(Math.floor(Math.random() * list.length),1)[0]
+	    var movenum = list.splice(Math.floor(Math.random() * list.length),1)[0];
 	    newList.push(movenum);
 		  				document.getElementById("list").innerHTML += movenum;
 
