--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		  				document.getElementById("list").innerHTML += movenum;
 
 	  }
-	  docu console.log(newList);
+	  console.log(newList);
 	}
 	</script>
 </body>
