--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<input type="button" id="button1" onclick="random_dominion();" value="돌려돌려!" />
+<input type="button" id="button1" onclick="random_dominion();" value="돌려돌려" />
 
   <div id="list"></div>
 
