--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-<input type="button" id="button1" onclick="random_dominion();" value="돌려돌려" />
-
+<input type="button" id="button1" onclick="random_dominion(); style="width:30vw; height:5vh;" value="기본판" />
+<input type="button" id="button1" onclick="random_dominion_ex1(); style="width:30vw; height:5vh;" value="약속된 번영" />
   <div id="list"></div>
 
 	<script>
@@ -20,6 +20,22 @@
 
 	  var list = ["개조", "관료", "광산", "대금업자", "대장장이", "도서관", "마을", "민병대", "시장", "실험실", "알현실", "예배당", "저장고", "정원", "작업장", "해자", "회의실", "장인", "선구자", "상인", "밀렵꾼", "보초병", "신하", "노상강도","마녀"];
 
+	  var newList = []
+	  while(newList.length < 10){
+	    var movenum = list.splice(Math.floor(Math.random() * list.length),1)[0];
+	    newList.push(movenum);
+		  				document.getElementById("list").innerHTML += '<p>' + movenum + '</p>';
+
+	  }
+	}
+		
+	function random_dominion_ex1()
+	{
+		document.getElementById("list").innerHTML = "";
+
+	  var list = ["개조", "관료", "광산", "대금업자", "대장장이", "도서관", "마을", "민병대", "시장", "실험실", "알현실", "예배당", "저장고", "정원", "작업장", "해자", "회의실", "장인", "선구자", "상인", "밀렵꾼", "보초병", "신하", "노상강도","마녀"];
+	  var list2 = ["행상인", "대장간", "불량배", "비축된 재산", "증축", "궁정", "대규모 시장", "은행"];
+		list.push(list2);
 	  var newList = []
 	  while(newList.length < 10){
 	    var movenum = list.splice(Math.floor(Math.random() * list.length),1)[0];
