--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-<input type="button" id="button1" onclick="random_dominion(); style="width:30vw; height:5vh;" value="기본판" />
-<input type="button" id="button2" onclick="random_dominion_ex1(); style="width:30vw; height:5vh;" value="약속된 번영" />
+<input type="button" id="button1" onclick="random_dominion();" style="width:30vw; height:5vh;" value="기본판" />
+<input type="button" id="button2" onclick="random_dominion_ex1();" style="width:30vw; height:5vh;" value="약속된 번영" />
   <div id="list"></div>
 
 	<script>
