--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	{
 				document.getElementById("list").innerHTML = "";
 
-	  var list = ["개조", "관료", "광산", "대금업자", "대장장이", "도서관", "마을", "민병대", "시장", "실험실", "알현실", "예배당", "저장고", "정원", "작업장", "해자", "회의실", "장인", "선구자", "상인", "밀렵꾼", "보초병", "신하", "노상강도","마녀"];
+	  var list = ["개조", "관료", "광산", "대금업자", "대장장이", "도서관", "마을", "민병대", "시장", "실험실", "알현실", "예배당", "저장고", "정원", "작업장", "해자", "회의실", "장인", "선구자", "상인", "밀렵꾼", "보초병", "신하", "노상강도", "마녀", "축제"];
 
 	  var newList = []
 	  while(newList.length < 10){
@@ -34,7 +34,7 @@
 		document.getElementById("list").innerHTML = "";
 
 	  var list = ["개조", "관료", "광산", "대금업자", "대장장이", "도서관", "마을", "민병대", "시장", "실험실", "알현실", "예배당", "저장고", "정원", "작업장", "해자", "회의실", "장인", "선구자", "상인", "밀렵꾼", "보초병", "신하", "노상강도","마녀"];
-	  var list2 = ["행상인", "대장간", "불량배", "비축된 재산", "증축", "궁정", "대규모 시장", "은행"];
+	  var list2 = ["감시탑", "궁정", "교역로", "밀수품", "기념 건축물", "인부촌", "대장간", "대규모시장", "도시", "지하금고", "부적", "불량배", "비축된 재산", "약장수", "왕의 인장", "은행", "조폐소", "주교", "대금", "채석장", "착수금", "폭도", "행상인", "증축", "회계 사무소"];
 		list.push(...list2);
 	  var newList = []
 	  while(newList.length < 10){
