--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 <input type="button" id="button1" onclick="random_dominion();" style="width:30vw; height:5vh;" value="기본판" />
 <input type="button" id="button2" onclick="random_dominion_ex1();" style="width:30vw; height:5vh;" value="약속된 번영" />
+	<br/><br/>
+<input type="button" id="button3" onclick="aeons_war_eternal();" style="width:30vw; height:5vh;" value="에이언즈 엔드 : 영원한 전쟁" />
   <div id="list"></div>
 
 	<script>
@@ -43,6 +45,39 @@
 		  				document.getElementById("list").innerHTML += '<p>' + movenum + '</p>';
 
 	  }
+	}
+		
+	function aeons_war_eternal(){
+		var list_gem = ["(3)동결된 마그마이트", "(3)공포스러운 금강석", "(6)혈석 보석", "(4)외계 물질", "(3)불길한 베릴라이트", "(5)괴이한 주괴", "(4)균열 광석", "(3)화산 유리", "(3)풍뎅이 화석", "(4)화산재 슬러그", "(6)고통의 돌"];
+		var list_relic = ["(3)콘클라베의 두루마리", "(8)차원 열쇠", "(2)마법사의 토템", "(3)악마 포획기", "(5)별의 입방체", "(6)소용돌이 건틀렛", "(4)원시적 숭배물", "(3)수수께끼 구체", "(3)영원의 부적", "(4)길잡이 나침반"];
+		var list_spell = ["(5)반응성 오라", "(5)태우기", "(5)서광", "(8)경질화","(4)굽이치는 번개", "(6)잃은 것 소환", "(4)불꽃 촉발", "(4)재로 돌리기", "(4)염화 쇄도","(7)평형","(5)몰아치는 불덩이","(5)격렬한 폭발","(2)내면의 불길","(5)창공의 첨탑", "(3)사역마 구현", "(8)소각","(4)고열 화살", "(4)탄화", "(6)신성 연마)", "(6)공명", "(3)대화재", "(6)전투 촉매", "(7)화염술", "(7)지하의 전송로", "(5)대류장 제어"];
+		
+		var newList_gem = [];
+		var newList_relic = [];
+		var newList_spell = [];
+		
+		while(newList_gem.length < 3){
+			var movenum = list.splice(Math.floor(Math.random() * list_gem.length),1)[0];
+			newList_gem.push(movenum);
+			document.getElementById("list").innerHTML += '<p>' + movenum + '</p>';
+
+	  	}
+		
+		
+		while(newList_relic.length < 2){
+			var movenum = list.splice(Math.floor(Math.random() * list_relic.length),1)[0];
+			newList_relic.push(movenum);
+			document.getElementById("list").innerHTML += '<p>' + movenum + '</p>';
+
+	  	}
+		
+		
+		while(newList_spell.length < 4){
+			var movenum = list.splice(Math.floor(Math.random() * list_spell.length),1)[0];
+			newList_spell.push(movenum);
+			document.getElementById("list").innerHTML += '<p>' + movenum + '</p>';
+
+	  	}
 	}
 	</script>
 </body>
