--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		while(newList_gem.length < 3){
 			var movenum = list_gem.splice(Math.floor(Math.random() * list_gem.length),1)[0];
 			newList_gem.push(movenum);
-			document.getElementById("list").innerHTML += '<p>' + movenum + '</p>';
+			document.getElementById("list").innerHTML += '<p style="color:purple;">' + movenum + '</p>';
 
 	  	}
 		
@@ -67,7 +67,7 @@
 		while(newList_relic.length < 2){
 			var movenum = list_relic.splice(Math.floor(Math.random() * list_relic.length),1)[0];
 			newList_relic.push(movenum);
-			document.getElementById("list").innerHTML += '<p>' + movenum + '</p>';
+			document.getElementById("list").innerHTML += '<p style="color:skyblue;">' + movenum + '</p>';
 
 	  	}
 		
@@ -75,7 +75,7 @@
 		while(newList_spell.length < 4){
 			var movenum = list_spell.splice(Math.floor(Math.random() * list_spell.length),1)[0];
 			newList_spell.push(movenum);
-			document.getElementById("list").innerHTML += '<p>' + movenum + '</p>';
+			document.getElementById("list").innerHTML += '<p style="color:orange;">' + movenum + '</p>';
 
 	  	}
 	}
